# pdfiller

./: .env.dist  .gitignore  Cargo.toml  Makefile  README.md  Web Service.postman_collection.json  docker-compose.yml  pdfiller.sh
.docker/: docker-compose-dev.yml  docker-compose-prod.yml
.docker/config/nginx/: nginx.conf
.docker/images/mongo/: Dockerfile
.docker/images/pdfiller/: Dockerfile
.docker/scripts/pdfiller/: start.sh
config/: config.toml
docker/config/nginx/: nginx.conf
docker/config/nginx/sites-enabled/: pdfiller
docker/images/redis/: Dockerfile
docker/images/web/: Dockerfile
docker/scripts/pdfiller/: start.sh
src/: client.rs  file.rs  logger.rs  main.rs  utils.rs
src/client/: mod.rs
src/config/: mod.rs
src/data/: mod.rs
src/file/: local.rs  mod.rs  s3.rs
src/mongo/: mod.rs  wrapper.rs
src/mongo/models/: document.rs  mod.rs
src/redis/: cache.rs  mod.rs  wrapper.rs
src/redis/models/: document.rs  mod.rs
src/services/: document.rs  mod.rs
src/services/compiler/: handler.rs  mod.rs
src/services/filler/: compiler.rs  form.rs  mod.rs  processor.rs
