[package]
    name = "pdfiller"
    version = "0.1.0"
    authors = ["Emulator000 <emulator@hotmail.it>"]
    edition = "2018"

[dependencies]
    async-std = "^1.7"
    async-trait = "^0.1"
    actix-web = { version = "^3.3", features = ["rustls"] }
    actix-rt = "^1.1"
    actix-multipart = "^0.3"
    reqwest = "^0.10"
    futures-lite = "^1.11"
    mongodb = { version = "^1.1", default-features = false, features = ["async-std-runtime"] }
    bson = "^1.1"
    serde = "^1.0"
    serde_derive = "^1.0"
    serde_json = "^1.0"
    lopdf = { version = "^0.26", features = ["embed_image"] }
    pdf_forms = "^0.3"
    zip = "^0.5"
    bytes = "^0.6"
    toml = "^0.5"
    envsubst = "^0.2"
    arc-swap = "^1.0"
    sentry = "^0.21"
    sanitize-filename = "^0.3"
    uuid = { version = "0.8", features = ["v4"] }
    linked-hash-map = "^0.5"
    simple-cache = "^0.1"
    regex = "^1.4"
    crystalsoft-utils = "^0.1"
    mime = "^0.3"
    chrono = "^0.4"
    rust-s3 = { version = "^0.26", features = ["rustls-tls"] }
    log = "^0.4"
    env_logger = "^0.8"

    # For static building
    openssl-sys = { version = "*", features = ["vendored"] }
