[package]
name = "pdfiller"
version = "0.1.1"
authors = ["Emulator000 <emulator@hotmail.it>"]
edition = "2018"
description = "A versatile PDF form filler made in Rust with a built-in reverse proxy with Nginx, Amazon S3 integration for storage and MongoDB."

[profile.release]
lto = true

[dependencies]
async-std = "^1.9"
async-trait = "^0.1"
actix-web = { version = "4.0.0-beta.6", features = ["rustls"] }
actix-rt = "^2.2"
actix-multipart = "0.4.0-beta.4"
reqwest = { version = "^0.11", features = ["json"] }
futures-lite = "^1.11"
mongodb = { version = "^1.2", default-features = false, features = ["async-std-runtime"] }
bson = "^1.2"
serde = "^1.0"
serde_derive = "^1.0"
serde_json = "^1.0"
lopdf = { version = "^0.26", features = ["embed_image"] }
pdf_forms = "^0.3"
zip = "^0.5"
toml = "^0.5"
envsubst = "^0.2"
arc-swap = "^1.3"
sentry = "^0.22"
sanitize-filename = "^0.3"
uuid = { version = "0.8", features = ["v4"] }
linked-hash-map = "^0.5"
simple-cache = "^0.2"
regex = "^1.5"
crystalsoft-utils = "^0.1"
mime = "^0.3"
chrono = "^0.4"
rust-s3 = { version = "^0.26", features = ["rustls-tls"] }
log = "^0.4"
env_logger = "^0.8"
clap = "^2.33"

# For static building
openssl-sys = { version = "*", features = ["vendored"] }
